Modify find service by name
